[workspace]
members = ["semantics", "solver", "syntax", "tracer"]

[workspace.dependencies]
gray-codes = "0.1"

[package]
name = "minuet"
version = "0.0.1"
edition = "2021"

[dependencies]
minuet-semantics = { path = "semantics" }
minuet-solver = { path = "solver" }
minuet-syntax = { path = "syntax" }
minuet-tracer = { path = "tracer" }
