[package]
name = "minuet-semantics"
version = "0.0.1"
edition = "2021"

[lib]
path = "semantics.rs"

[dependencies]
gray-codes.workspace = true
minuet-ground = { path = "../ground", features = ["macros"] }
minuet-macro = { path = "../macro" }
minuet-solver = { path = "../solver" }
minuet-syntax = { path = "../syntax", features = ["macros"] }
minuet-tracer = { path = "../tracer" }
thiserror.workspace = true
